--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,20 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
+
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 28
+    flavorDimensions "mode"
     defaultConfig {
         applicationId "pl.skipcode.basekotlinapp"
-        minSdkVersion 21
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion Versions.minSdk
+        targetSdkVersion Versions.targetSdk
+        versionCode Versions.versionCode
+        versionName Versions.versionName
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -20,13 +23,57 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    productFlavors {
+        production {
+            dimension "mode"
+            buildConfigField "boolean", "TRY_NOT_TO_USE_SSL", "false"
+            buildConfigField "String", "PATH", "\"https://domena.pl/\""
+            buildConfigField "String", "PATH_API", "\"https://domena.pl/api/\""
+        }
+        staging {
+            dimension "mode"
+            applicationIdSuffix ".stage"
+            versionNameSuffix"-stage"
+            buildConfigField "boolean", "TRY_NOT_TO_USE_SSL", "false"
+            buildConfigField "String", "PATH", "\"https://domena.pl/\""
+            buildConfigField "String", "PATH_API", "\"https://domena.pl/api/\""
+        }
+        develop {
+            dimension "mode"
+            applicationIdSuffix ".develop"
+            versionNameSuffix"-develop"
+            buildConfigField "boolean", "TRY_NOT_TO_USE_SSL", "false"
+            buildConfigField "String", "PATH", "\"http://dev.domena.pl/\""
+            buildConfigField "String", "PATH_API", "\"http://dev.domena.pl/api/\""
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation Libs.kotlinStdLib
+
+    //Fabric
+    implementation(Libs.crashlytics) {
+        transitive = true;
+    }
+
+    //Timber
+    implementation Libs.timber
+
+    //Leakcanary
+    debugImplementation Libs.leakcanary
+
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    //Dagger
+    implementation Libs.dagger2
+    kapt Libs.dagger2Compiler
+    implementation Libs.dagger2Android
+    implementation Libs.dagger2AndroidSupport
+    kapt Libs.dagger2Processor
+
+    testImplementation Libs.junit
+    androidTestImplementation Libs.runner
+    androidTestImplementation Libs.junit
 }
