--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,9 @@ captures/
 .idea/libraries
 .idea/caches
 
+# Fabric
+app/fabric.properties
+
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
 #*.jks
